--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
+    "axios": "^0.20.0",
     "echarts": "^4.8.0",
     "flag-icon-css": "^3.4.6",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
+    "qs": "^6.9.4",
     "tiptap": "^1.27.1",
     "tiptap-extensions": "^1.29.1",
     "vue": "^2.6.11",
