river index wip + misc

--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "dev": "npm run serve"
   },
   "dependencies": {
+    "@turf/bbox": "^6.0.1",
+    "@turf/buffer": "^5.1.5",
+    "@turf/helpers": "^6.1.4",
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
     "axios": "^0.20.0",
     "echarts": "^4.8.0",
     "flag-icon-css": "^3.4.6",
+    "lodash.debounce": "^4.0.8",
+    "mapbox-gl": "^1.12.0",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
     "qs": "^6.9.4",
+    "screenfull": "^5.0.2",
+    "scroll-into-view-if-needed": "^2.2.26",
     "tiptap": "^1.27.1",
     "tiptap-extensions": "^1.29.1",
     "vue": "^2.6.11",
@@ -41,6 +48,7 @@
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.4",
     "eslint": "^6.7.2",
+    "eslint-plugin-standard": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
     "raw-loader": "^4.0.1",
     "sass": "^1.19.0",
